--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
-    <main>
-      <!-- Student code goes here -->
-    </main>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Prework Study Guide</title>
+	</head>
+	<body>
+		<header id="top">
+			<h1>Prework Study Guide</h1>
+			<img
+				src="./assets/bowtie-cat.png"
+				alt="Profile image of cat wearing a bow tie."
+			/>
+		</header>
+		<main>
+			<section class="card" id="html-section">
+				<h2>HTML</h2>
+				<ul>
+					<li>
+						I learned that creating ssh keys isn't as big a deal as I thought
+					</li>
+					<li>I also learned that Sallie Mae needs help with its website</li>
+				</ul>
+			</section>
 
-    <footer>
-      <p>Berk work</p>
-    </footer>
-  </body>
+			<section class="card" id="css-section">
+				<h2>CSS</h2>
+				<ul>
+					<li>I learned not much about css as yet</li>
+				</ul>
+			</section>
+
+			<section class="card" id="git-section">
+				<h2>Git</h2>
+				<ul>
+					<li>
+						pushing and pulling to and from github repos is tricky when there
+						are multiple branches
+					</li>
+				</ul>
+			</section>
+
+			<section class="card" id="javascript-section">
+				<h2>JavaScript</h2>
+				<ul>
+					<li>I learned that JavaScript is the face of the modern world</li>
+				</ul>
+			</section>
+		</main>
+
+		<footer>
+			<p>Berk work</p>
+		</footer>
+	</body>
 </html>
