--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon copy.ico" />
+		<link rel="icon" href="./assets/favicon.ico" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Prework Study Guide</title>
@@ -54,5 +54,6 @@
 		<footer>
 			<p>Berk work</p>
 		</footer>
+		<div id="root"></div>
 	</body>
 </html>
