--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="./assets/style.css" />
 		<meta charset="UTF-8" />
 		<link rel="icon" href="./assets/favicon.ico" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,7 +30,14 @@
 			<section class="card" id="css-section">
 				<h2>CSS</h2>
 				<ul>
-					<li>I learned not much about css as yet</li>
+					<li>
+						A margin indicates how much space we want around the outside of an
+						element.
+					</li>
+					<li>
+						A padding indicates how much space we want around the content inside
+						an element.
+					</li>
 				</ul>
 			</section>
 
